fix: (#39) complete stream toList migration